deployment/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-banking-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: frontend-banking-deployment
  template:
    metadata:
      labels:
        app: frontend-banking-deployment
    spec:
      containers:
      - name: frontend-banking-container
        image: victoriacloud21stcentury/bank-frontend:v6-22037e2
        ports:
        - containerPort: 3000
