deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-frontend-service
spec:
  selector:
    app: frontend-banking-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: loadbalancer
