deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: http-01-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bankapi.enumavictoria.site
    - bank.enumavictoria.site
    - grafana.enumavictoria.site  # Add Grafana to TLS
    secretName: bank-enumavictoria-site
  rules:
  - host: bank.enumavictoria.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-frontend-service
            port:
              number: 3000
  - host: bankapi.enumavictoria.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-backend-service
            port:
              number: 8080
  - host: grafana.enumavictoria.site  # Add Grafana rule
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana # This is typically the default service name   
            port:
              number: 80   # Usually port 80 or 3000
